--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,23 @@ services:
       - elasticsearch
     restart: unless-stopped
 
+  filebeat:
+    image: elastic/filebeat:${ELASTIC_VERSION}
+    container_name: filebeat
+    user: root
+    command: ["filebeat", "-e", "--strict.perms=false"]
+    volumes:
+      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/log/syslog:/var/log/syslog:ro
+      - /var/log/auth.log:/var/log/auth.log:ro
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
+      - kibana
+
 networks:
   elk:
     driver: bridge
